assets/css/neurotidal-style.css
/* special styles for neurotidal website */





/*
background image
*/

.bg {
  background-image: url("/images/background/neurotidal-live-background.webp");
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  @media (max-width: 767px) {
    background-image: url("/images/background/neurotidal-live-background-mobile.webp");
  }
}





/*
masthead
*/

.masthead {
    border-bottom: none !important;
}



/*
cookie banner
*/

#cookie-banner {
    display: block;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.2);
    color: white;
    background-color: rgb(54, 69, 79);
    padding: 10px;
    border-radius: 5px;
    z-index: 999;
    font-size: 70%
}


/*
socials
*/

.socials {
  list-style: none;
  margin: 0;
  padding: 0;
}

.socials__item {
  display: inline-block;
  margin-left: 7px;
}

.no-margin {
  margin-left: 0px;
}

.socials__item__link {
  position: relative;
  display: block;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background: #ff4dfc;
  font-size: 24px;
  line-height: 50px;
  text-align: center;
  transition: background-color 0.3s ease;

  &:hover {
    background: #9940ff;
  }

}

















/*
standard classes like center
*/

.center {
    text-align: center;
}

.margin-sides {
    margin: 0 10vw;
}

.margin-top-xl {
    margin-top: 250px;
}

.margin-bottom {
    margin-bottom: 100px;
}







/*
merch
*/

.merch {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 10px;
}

.merch img {
    max-width: 100%;
    height: auto;
}

@media (max-width: 767px) {
    .merch {
        grid-template-columns: 1fr;
        gap: 0px;
    }
}

.merch img:hover {
    box-shadow: none !important;
    transform: scale(1.05);
}




/*
buttons
*/

.btn-neurotidal {
    margin-top: 10px;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    background-color: #ff4dfc;
    color: #fff;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.btn-neurotidal:hover {
    background-color: #e63fc8;
}

a.btn {
    font-size: 1em;
    color: inherit;
    text-decoration: none;
}

a.btn:hover {
    text-decoration: none !important;
}

.btn-bio {
    width: 35vw;
}

@media (max-width: 767px) {
    .btn-bio {
        width: 50vw;
    }
}

.btn-spotify {
    background-color: #1DB954;
}

.btn-spotify:hover {
    background-color: #1a9e49;
}



/*
boxes
*/

.text-box {
    border-radius: 5px;
    background-color: rgba(0, 0, 0, 0.5);
    padding: 15px;
}



/*
tourdates
*/

.tour-date {
    position: relative;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 10px;
    padding: 20px;
    margin-bottom: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    color: #fff;
}

.tour-date h3 {
    font-size: 1.5em;
    margin: 5px 0;
}

.tour-date p {
    font-size: 1em;
    margin: 5px 0;
}

.hidden {
    visibility: none;
}

